<resources>
    <string name="app_name">Task</string>

    <string name="command_ok">OK</string>
    <string name="command_cancel">Cancel</string>
    <string name="task">Task</string>
    <string name="task_add">Add task</string>
    <string name="task_add_hint_title">Title*</string>
    <string name="task_add_hint_date">Date*</string>
    <string name="task_add_hint_time">Time*</string>
    <string name="task_add_hint_description">Description (optional)</string>
    <string name="task_add_field_non_filled_message">Please,\nfill in all required fields.\nRequired fields have an asterisk *.</string>
    <string name="task_add_create">Create Task</string>
    <string name="task_add_edit">Edit Task</string>
    <string name="task_add_cancel">Cancel</string>
    <string name="task_menu_task_edit">Edit</string>
    <string name="task_menu_task_delete">Delete</string>
    <string name="task_menu_task_delete_title">Delete task</string>
    <string name="task_menu_task_delete_message">Are you sure you want to delete this task?</string>
    <string name="task_empty_list_message">Ooops!\nYou do not have any tasks yet!</string>
</resources>